# UnitTests_HW_GrX_Student116_EnisShabani

./: CMakeLists.txt  READ.ME  README.md
MyFunctions/: T01_IsValidEmail.cpp  T02_CalculateShipping.cpp  T02_CalculateShipping.h  T03_ContainsBadWords.cpp  T03_ContainsBadWords.h  T04_PassedExam.cpp  T04_PassedExam.h  T05_IsStrongPassword.cpp  T05_IsStrongPassword.h
MyFunctionsTests/: T01_IsValidEmailTest.cpp  T02_CalculateShippingTest.cpp  T03_ContainsBadWordsTest.cpp  T04_PassedExamTest.cpp  T05_IsStrongPasswordTest.cpp
